# Assignment2_team1

./: .gitignore  PDF Extraction API Evaluation.docx  README.md  docker-compose.yaml  pyproject.toml  sample_env
airflow_pipelines/: docker-compose.yaml  readme.md
airflow_pipelines/dags/: dag.py  task1.py  task2.py  task3.py  task4.py  task5.py
assets/: high_level_architecture_diagram
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/auth/: jwt_handler.py  user_routes.py
backend/app/config/: settings.py
backend/app/controllers/: auth_controller.py
backend/app/db/: db.py  models.py
backend/app/models/: user_model.py
backend/app/routes/: auth_routes.py  query_routes.py  summary_routes.py
backend/app/services/: auth_service.py  database_service.py  document_service.py  gpt.py  mongo.py
frontend/: Dockerfile  ObjectStore.py  authentication.py  landing.py  main.py  pyproject.toml  service.py  session_store.py  utils.py
frontend/.streamlit/: config.toml
frontend/pages/: Querying.py  Summary.py  home.py  querying.py  search.py  summary.py
frontend/pppages/: Summary.py
frontend/services/: service.py
infra/: schema.sql  terraform.tfvars
prototyping/: docparser_login.py  extract_pdf_files_from_folder.py  hf_clone.py  mongo_conn.py  opensource_pdf_test.ipynb  pdf_co_testing.ipynb  pdf_plumber_extract_table.py  pymupdf_fix.ipynb
sample_secrets/: public_key.pem  sample_gcp.json
scripts/: airflow_architecture_diagram.py  architecture_diagram.py
