[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["uday kiran <udaykiranchintu16@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.35"
pydantic = {extras = ["email"], version = "^2.9.2"}
regex = "^2024.9.11"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.2"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"